<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.pepoc.androidnewtechnique.SpannableString.SpannableStringActivity"
    tools:showIn="@layout/activity_spannable_string">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.pepoc.androidnewtechnique.SpannableString.TopicTextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"/>


        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="3" >


            <Button
                android:id="@+id/image_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image" />


            <Button
                android:id="@+id/url_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/url" />


            <Button
                android:id="@+id/color_btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color1" />


            <Button
                android:id="@+id/color_btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color2" />


            <Button
                android:id="@+id/font_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/font" />


            <Button
                android:id="@+id/style_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/style" />


            <Button
                android:id="@+id/strike_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strike" />


            <Button
                android:id="@+id/underline_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/underline" />

            <Button
                android:id="@+id/clickable_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clickable" />
        </GridLayout>
    </LinearLayout>

</RelativeLayout>
